--- a/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -299,7 +299,7 @@ WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputMod
 BP_MainCamera_C=
 CineCameraComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers,K2Node_FunctionEntry.Inputs.DB74A163414AD40FC766CE97C112E71B
-GM_MainGameMode_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers,K2Node_FunctionEntry.Inputs.DB74A163414AD40FC766CE97C112E71B
+GM_MainGameMode_C=
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers,K2Node_FunctionEntry.Inputs.DB74A163414AD40FC766CE97C112E71B
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers,K2Node_FunctionEntry.Inputs.DB74A163414AD40FC766CE97C112E71B
 WB_PlayerIcons_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
@@ -488,9 +488,9 @@ TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 WP_InputBox_C="\"Object\" "
-UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object\" \"Object.Appearance.WidgetStyle.BackgroundImageNormal.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageNormal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageHovered.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageHovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageFocused.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageFocused.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageReadOnly.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageReadOnly.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.TextStyle.Font\" \"Object.Appearance.WidgetStyle.TextStyle.Font.OutlineSettings\" \"Object.Appearance.WidgetStyle.TextStyle.ColorAndOpacity\" \"Object.Appearance.WidgetStyle.TextStyle.SelectedBackgroundColor\" \"Object.Appearance.WidgetStyle.TextStyle.StrikeBrush\" \"Object.Appearance.WidgetStyle.TextStyle.StrikeBrush.TintColor\" \"Object.Appearance.WidgetStyle.TextStyle.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightColor\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightShape\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightShape.TintColor\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightShape.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.TextStyle.UnderlineBrush\" \"Object.Appearance.WidgetStyle.TextStyle.UnderlineBrush.TintColor\" \"Object.Appearance.WidgetStyle.TextStyle.UnderlineBrush.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HoveredThumbImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HoveredThumbImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HoveredThumbImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.NormalThumbImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.NormalThumbImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.NormalThumbImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.DraggedThumbImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.DraggedThumbImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.DraggedThumbImage.OutlineSettings.Color\" \"Object.Behavior.VirtualKeyboardOptions\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditorStyleSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
@@ -554,17 +554,17 @@ CameraActor=
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_InputBox_C="\"Object\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_Chatbox_C="\"Object\" "
 WB_EnteredText_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditableText="\"Object\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.Font.OutlineSettings\" \"Object.Appearance.WidgetStyle.ColorAndOpacity\" \"Object.Appearance.WidgetStyle.CaretImage\" \"Object.Appearance.WidgetStyle.CaretImage.TintColor\" \"Object.Appearance.WidgetStyle.CaretImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected.Margin\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing.Margin\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing.OutlineSettings.Color\" \"Object.Behavior.VirtualKeyboardOptions\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 K2Node_InputKey="\"Object\" "
 K2Node="\"Object\" "
 WB_Raffle_C="\"Object\" "
@@ -585,7 +585,7 @@ ActorRecorderPropertyMap="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
 WB_ViewerHUD_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WB_StreamerHUD_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WB_StreamerHUD_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_PlayerScore_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WidgetBlueprint="\"Object\" "
 BaseWidgetBlueprint="\"Object\" "
@@ -608,25 +608,30 @@ BrushComponent="\"Object\" "
 WB_ViewerPerspective_C="\"Object\" "
 BPC_ScoreHandler_C="\"Object\" "
 ChildActorComponent="\"Object\" "
+WB_StartScreen_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WB_EndScreen_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -634,9 +639,11 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/UI/ViewerExclusive/WB_Raffle.WB_Raffle
+OpenAssetsAtExit=/Game/UI/GeneralUI/WB_StartScreen.WB_StartScreen
+OpenAssetsAtExit=/Game/UI/GeneralUI/WB_EndScreen.WB_EndScreen
 OpenAssetsAtExit=/Game/GM_MainGameMode.GM_MainGameMode
-OpenAssetsAtExit=/Game/BP_ScoreManager.BP_ScoreManager
+OpenAssetsAtExit=/Game/BP_MainPlayerController.BP_MainPlayerController
+OpenAssetsAtExit=/Game/GameData/BP_StreamerDataGI.BP_StreamerDataGI
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1806,6 +1813,30 @@ MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 BP_ScoreManager_C.Default=True
 EditorKeyboardShortcutSettings.Cinematic Viewport=True
+WB_StartScreen_C.Layout=True
+WB_StartScreen_C.Appearance=True
+WB_StartScreen_C.Input=True
+WB_StartScreen_C.Accessibility=True
+WB_StartScreen_C.Interaction=True
+WB_StartScreen_C.Performance=True
+WB_StartScreen_C.Behavior=True
+WB_StartScreen_C.Render Transform=True
+WB_StartScreen_C.Rendering=True
+WB_StartScreen_C.Navigation=True
+WB_StartScreen_C.Localization=True
+WB_StartScreen_C.Designer=True
+WB_EndScreen_C.Appearance=True
+WB_EndScreen_C.Input=True
+WB_EndScreen_C.Accessibility=True
+WB_EndScreen_C.Interaction=True
+WB_EndScreen_C.Designer=True
+WB_EndScreen_C.Performance=True
+WB_EndScreen_C.Behavior=True
+WB_EndScreen_C.Render Transform=True
+WB_EndScreen_C.Rendering=True
+WB_EndScreen_C.Navigation=True
+WB_EndScreen_C.Localization=True
+WB_EndScreen_C.Layout=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -1846,7 +1877,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/GameData
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1855,28 +1886,31 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem1=/Game/BP_ScoreManager
-MRUItem2=/Game/GM_MainGameMode
-MRUItem3=/Game/UI/ViewerExclusive/WB_Raffle
-MRUItem4=/Game/BP_MainPlayerController
-MRUItem5=/Game/BPC_ScoreHandler
-MRUItem6=/Game/GameData/BP_StreamerDataGI
-MRUItem7=/Game/UI/ViewerExclusive/WB_ViewerPerspective
-MRUItem8=/Game/UI/GeneralUI/WB_UpgradeButtons
-MRUItem9=/Game/UI/GeneralUI/WB_PlayerScore
-MRUItem10=/Game/UI/GeneralUI/WB_StreamerHUD
-MRUItem11=/Game/GameData/STRUCT_Viewer
-MRUItem12=/Game/UI/ViewerExclusive/WB_Chatbox
-MRUItem13=/Game/UI/ViewerExclusive/WB_ViewerHUD
-MRUItem14=/Game/BPC_RaffleHandling
-MRUItem15=/Game/UI/GeneralUI/WB_Icon
-MRUItem16=/Game/UI/GeneralUI/WB_PlayerIconDisplay
-MRUItem17=/Game/UI/ViewerExclusive/WB_EnteredText
-MRUItem18=/Game/BP_MainCamera
-MRUItem19=/Game/Scenes/TestingScene
-MRUItem20=/Game/GameElements/BP_Cube
-MRUItem21=/Game/Input/MC_Viewer
+MRUItem0=/Game/GameData/BP_StreamerDataGI
+MRUItem1=/Game/UI/GeneralUI/WB_EndScreen
+MRUItem2=/Game/BPC_RaffleHandling
+MRUItem3=/Game/BP_MainPlayerController
+MRUItem4=/Game/UI/GeneralUI/WB_StreamerHUD
+MRUItem5=/Game/GameData/Enum_GameState
+MRUItem6=/Game/GM_MainGameMode
+MRUItem7=/Game/UI/ViewerExclusive/WB_Raffle
+MRUItem8=/Game/UI/GeneralUI/WB_StartScreen
+MRUItem9=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem10=/Game/BP_ScoreManager
+MRUItem11=/Game/BPC_ScoreHandler
+MRUItem12=/Game/UI/ViewerExclusive/WB_ViewerPerspective
+MRUItem13=/Game/UI/GeneralUI/WB_UpgradeButtons
+MRUItem14=/Game/UI/GeneralUI/WB_PlayerScore
+MRUItem15=/Game/GameData/STRUCT_Viewer
+MRUItem16=/Game/UI/ViewerExclusive/WB_Chatbox
+MRUItem17=/Game/UI/ViewerExclusive/WB_ViewerHUD
+MRUItem18=/Game/UI/GeneralUI/WB_Icon
+MRUItem19=/Game/UI/GeneralUI/WB_PlayerIconDisplay
+MRUItem20=/Game/UI/ViewerExclusive/WB_EnteredText
+MRUItem21=/Game/BP_MainCamera
+MRUItem22=/Game/Scenes/TestingScene
+MRUItem23=/Game/GameElements/BP_Cube
+MRUItem24=/Game/Input/MC_Viewer
 
 [AssetEditorToolkitTabLocation]
 /Game/ENUM_GameStates.ENUM_GameStates=1
@@ -1910,6 +1944,9 @@ MRUItem21=/Game/Input/MC_Viewer
 /Game/BP_ScoreManager.BP_ScoreManager=0
 /Game/BPC_ScoreHandler.BPC_ScoreHandler=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/GameData/Enum_GameState.Enum_GameState=0
+/Game/UI/GeneralUI/WB_StartScreen.WB_StartScreen=0
+/Game/UI/GeneralUI/WB_EndScreen.WB_EndScreen=0
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -2067,7 +2104,7 @@ bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
 
 [RootWindow]
-ScreenPosition=X=-18.000 Y=0.000
+ScreenPosition=X=316.000 Y=152.000
 WindowSize=X=1282.000 Y=722.000
 InitiallyMaximized=True
 
